--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "social-media-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.js"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
